# ollama-rag-example

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/ollama_rag/: __init__.py  commands.py  continuos_learner.py  learner.py
