[project]
name = "ollama-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.13",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-ollama>=0.3.3",
    "langchain-text-splitters>=0.3.8",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250506",
    "pi-heif>=0.22.0",
    "pikepdf>=9.9.0",
    "pytesseract>=0.3.13",
    "unstructured>=0.17.2",
    "unstructured-inference>=1.0.5",
    "unstructured-pytesseract>=0.3.15",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
ollama-rag = "ollama_rag:main"
